tests/ui/coroutine/too-many-parameters-ice.stderr
error[E0628]: too many parameters for a coroutine (expected 0 or 1 parameters)
  --> $DIR/too-many-parameters-ice.rs:8:5
   |
LL |     |(1, 42), ()| {
   |     ^^^^^^^^^^^^^

error[E0005]: refutable pattern in closure argument
  --> $DIR/too-many-parameters-ice.rs:8:6
   |
LL |     |(1, 42), ()| {
   |      ^^^^^^^ patterns `(i32::MIN..=0_i32, _)` and `(2_i32..=i32::MAX, _)` not covered
   |
   = note: the matched value is of type `(i32, i32)`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0005, E0628.
For more information about an error, try `rustc --explain E0005`.
